# StaffDemo_

./: CMakeLists.txt
execute/: CMakeLists.txt  main.cpp
google-tests/: CMakeLists.txt
google-tests/src/: staffTests.cpp
source/: CMakeLists.txt
source/Business-logic/: CMakeLists.txt
source/Business-logic/Core/: CMakeLists.txt
source/Business-logic/Core/include/: AppSettings.hpp  ScreenEnum.hpp  ThemeManager.hpp  TranslateManager.hpp
source/Business-logic/Core/src/: AppSettings.cpp  ThemeManager.cpp  TranslateManager.cpp
source/Business-logic/FileManagers/: CMakeLists.txt
source/Business-logic/FileManagers/include/: StaffStorageProvider.hpp  ThemeStorageProvider.hpp  TranslateStorageProvider.cpp  TranslateStorageProvider.hpp
source/Business-logic/FileManagers/src/: StaffStorageProvider.cpp  ThemeStorageProvider.cpp
source/Business-logic/Repository/: CMakeLists.txt
source/Business-logic/Repository/include/: ProjectRepository.hpp  RepositoryInstruments.hpp  StaffRepository.hpp
source/Business-logic/Repository/src/: ProjectRepository.cpp  RepositoryInstruments.cpp  StaffRepository.cpp
source/Business-logic/Staff/: CMakeLists.txt
source/Business-logic/Staff/include/: Engineer.hpp  IEmployee.hpp  IEngineer.hpp  IPersonal.hpp  Manager.hpp  Personal.hpp  Project.hpp  StaffInterfaces.hpp  TempEmplyee.hpp  TempProject.hpp
source/Business-logic/Staff/src/: Engineer.cpp  IEmployee.cpp  IEngineer.cpp  IPersonal.cpp  Manager.cpp  Personal.cpp  Project.cpp
source/Business-logic/Theme/: CMakeLists.txt
source/Business-logic/Theme/include/: Theme.hpp  ThemeColor.hpp
source/Business-logic/Utils/: CMakeLists.txt
source/Business-logic/Utils/include/: Spliter.hpp  TimeUtils.cpp  TimeUtils.hpp  json.hpp
source/Business-logic/Utils/src/: Spliter.cpp
source/User-Interface/: CMakeLists.txt
source/User-Interface/Core/: CMakeLists.txt
source/User-Interface/Core/include/: ScreenManager.hpp  UserInterface.cpp  UserInterface.hpp
source/User-Interface/Core/src/: ScreenManager.cpp
source/User-Interface/Model/: CMakeLists.txt
source/User-Interface/Model/include/: BasicModel.hpp
source/User-Interface/Model/src/: BasicModel.cpp
source/User-Interface/View/: CMakeLists.txt
source/User-Interface/View/include/: BasicView.hpp  StartScreenView.hpp
source/User-Interface/View/src/: BasicView.cpp  StartScreenView.cpp
source/User-Interface/ViewModel/: CMakeLists.txt
source/User-Interface/ViewModel/include/: BasicViewModel.hpp  StartScreenViewModel.hpp
source/User-Interface/ViewModel/src/: BasicViewModel.cpp  StartScreenViewModel.cpp
